--- a/pom.xml
+++ b/pom.xml
@@ -28,5 +28,18 @@
   		<version>2.4</version>
   	</dependency>
   	
+  	<dependency>
+	    <groupId>com.github.Kinneen-Logic</groupId>
+	    <artifactId>student-reg</artifactId>
+	    <version>master-SNAPSHOT</version>
+	</dependency>
   </dependencies>
+  
+  <repositories>
+		<repository>
+		    <id>jitpack.io</id>
+		    <url>https://jitpack.io</url>
+		</repository>
+	</repositories>
+  
 </project>
